# dev-vai

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .prettierignore  .probe-out.txt  .vai-triage.json  AGENTS.md  CONTRIBUTING.md  CTRL+A_FROM_VSCOD.MD  Dockerfile  LICENSE  MASTER_PROMPT.md  Master.example.md  Master.md  README.md  REBUILD_PROMPT_PREMIUM_TEMPLATE_tier4.md  SECURITY.md  Update Vai.bat  _debug-deploy-nextjs-battle-tested.json  _debug-deploy-nextjs-vai.json  bench-fixes.txt  bench-full.txt  bench-lang.txt  bench-live.txt  bench-net.txt  bench-prec.txt  council-self-improvement-visual-demo.html  docker-compose.dev.yml  docker-compose.sandboxes.yml  docker-compose.yml  eslint.config.js  first_message_to_test.md  package.json  pnpm-lock.yaml  test-result.txt  tsconfig.base.json  turbo.json  vai-50q-v3-results.txt  vai-knowledge.json  (+2 more)
.codex-run/: ui-chat-audit-pass.json  ui-chat-audit.json  ui-chat-dom-followups-audit.json  ui-chat-final-audit.json  vai-iterative-chat-audit.json  vai-iterative-chat-audit.mjs
.cursor/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
MDS/: Thorsen.md  extract_good_ideas_from_here.md  insert_new_idea.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docker/: docker-compose.searxng.yml  docker-compose.visual-test.yml  nginx.conf
docs/: COUNCIL-CHANGELOG.md  INDEX.md  PLAN-draft-race-owner-approval.md  RECIPROCITY.md  RESPONSE-QUALITY-CONTRACT.md  TESTING-STRATEGY.md  agent-tooling-guide.json  all-16-template-specs.md  anti-patterns.md  async-audit-revise-in-place-plan.md  constraint-reconciliation.md  the-idea.md  (+24 more)
(+1185 files in other folders)
