[package]
name = "veggaai"
version = "0.2.0"
edition = "2021"

[features]
dangerous-ptt-fixture = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# Global Win+Alt dictation: clipboard hand-off (keystrokes are raw SendInput).
arboard = "3"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security_Cryptography",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
sha2 = "0.10"
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
